What's New in Python 2.2.3 ?
Release date: XX-XXX-2003
============================

- Windows:  file.truncate(size) failed on large files when size didn't
  fit in 32 bits.  This was fixed by backporting new Windows truncation
  code and tests from 2.3.

- It is no longer possible to use object.__setattr__ to circumvent the
  restrictions on setting attributes of type objects.

- Implemented os.fsync() for Windows, where it calls the MS _commit()
  function.  Before, there was no way in core Python to ensure file
  writes actually showed up on disk when necessary.

- Make all the strip, lstrip, rstrip functions/methods on
  string/unicode/UserString consistent by adding and/or
  documenting the chars parameter.  The chars parameter
  specifies which characters to strip.

- Some horridly obscure problems were fixed involving interaction
  between garbage collection and classes with "ambitious" getattr hooks.
  If a class instance didn't have a __del__ method, but did have a
  __getattr__ hook, and the instance became reachable only from an
  unreachable cycle, and the hook resurrected or deleted unreachable
  objects when asked to resolve "__del__", anything up to a segfault
  could happen.  That's been repaired.

- Skip locale test on Mac OS X.

- Backported the "largefile" requirement for test_largefile on Mac OS X.

- Backported email package 2.5.2, which makes address parsing slightly
  more robust.

- SF #710576: Backport of fix for #663074, to implement per-interpreter
  codecs registries. This adds new members at the end of
  PyInterpreterState.

- SF #705836: The platform-independent routines for packing floats in
  IEEE formats (struct.pack's <f, >f, <d, and >d codes; pickle and
  cPickle's protocol 1 pickling of floats) ignored that rounding can
  cause a carry to propagate.  The worst consequence was that, in rare
  cases, <f and >f could produce strings that, when unpacked again,
  were a factor of 2 away from the original float.  This has been
  fixed.